--- a/index.html
+++ b/index.html
@@ -41,6 +41,48 @@
 
 <div class="body-content">
 
+<div class="profile-page-block">
+
+<div class="page-name">Профиль</div>
+
+<div class="wallet-separator"></div>
+
+<div class="profile-input-info">
+Руслан
+</div>
+
+<div class="profile-input-info">
+21.09.2006
+</div>
+
+<div class="profile-input-info">
+rusadmru7@rubi.fun
+</div>
+
+<div class="profile-input-info">
++79615263515
+</div>
+
+<div class="profile-input-info">
+Российская Федерация
+</div>
+
+<style>
+.profile-input-info{
+	width:100%;
+	background: #15192f;
+	color:#fff;
+	font-size: 13px;
+	height: 40px;
+	padding-left: 15px;
+	display:flex;
+	align-items: center;
+	margin-bottom:20px;
+}
+</style>
+	
+</div>
+
 <div class="more-page-block">
 
 <div class="page-name">Еще</div>
@@ -167,7 +209,7 @@
 
 </div>
 
-<div class="home-page-block active">
+<div class="home-page-block">
 
 <div class="carousel-wrapper">
 <div class="carousel-home">
