--- a/index.html
+++ b/index.html
@@ -67,19 +67,7 @@ rusadmru7@rubi.fun
 Российская Федерация
 </div>
 
-<style>
-.profile-input-info{
-	width:100%;
-	background: #15192f;
-	color:#fff;
-	font-size: 13px;
-	height: 40px;
-	padding-left: 15px;
-	display:flex;
-	align-items: center;
-	margin-bottom:20px;
-}
-</style>
+<div class="wallet-separator"></div>
 	
 </div>
 
@@ -209,7 +197,7 @@ rusadmru7@rubi.fun
 
 </div>
 
-<div class="home-page-block">
+<div class="home-page-block active">
 
 <div class="carousel-wrapper">
 <div class="carousel-home">
