--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </div>
 
 <div class="profile-input-info">
-21.09.2006
+17.09.2006
 </div>
 
 <div class="profile-input-info">
@@ -125,12 +125,12 @@ rusadmru7@rubi.fun
 
 <div class="wallet-separator"></div>
 
-<div class="ref-banner">
+<!-- <div class="ref-banner">
 <div class="ref-banner-background">
 <Img src="img/ru.png">
 </div>
 
-</div>
+</div> -->
 
 <div class="promo-banner-mobile">
 <div class="promo-banner-mobile-content">
