--- a/index.html
+++ b/index.html
@@ -203,10 +203,24 @@ rusadmru7@rubi.fun
 <div class="carousel-home">
 
 <div class="carousel-card-link">
-<div class="carousel-card-content" style="background-image: url(https://static-adm.cdn1win.com/universal-offer-files/RzzypgNbsaY2rKTZURoWo_Dt5u-whWsuHMVoudiQ8kzH-APvy_nzE6SGUxriFzxjrWI5Kob1CSKt72XDbhixwsexcIQxARhW3mSb.png), linear-gradient(103.36deg, rgb(166, 7, 30), rgb(23, 5, 101));}">
+<div class="carousel-card-content" style="background-image: url("https://static-adm.cdn1win.com/universal-offer-files/y9EFZ1akMOE6eBe1D2LO670NYOBVr6JvpZQ3d6VqGugog9OGXRVP2Y0gvxAgUXr1iX9XNTm6qJQW2rslQtdCIR6i32Gii_l9GH5t.png"), linear-gradient(103.36deg, rgb(0, 162, 255), rgb(0, 42, 120));">
 <div class="carousel-card-container">
 <div class="carousel-card-container-title">
-Каждые 10 дней<br> +20% за вклад!
+Лицензионный слоты<br>прямо в приложении!
+</div>
+</div>
+<div class="carousel-card-arrow">
+<svg viewBox="0 0 16 10" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" class="icon icon-arrow-right-long sm BonusCard_arrowIcon_tQ62j BonusCard_arrowIcon_tQ62j"><path d="M10.917 1.25L14.667 5m0 0l-3.75 3.75M14.667 5H1.333" stroke="#fff" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round"></path></svg>
+</div>
+</div>
+</div>
+
+	
+<div class="carousel-card-link ref-card-link">
+<div class="carousel-card-content" style="background-image: url(https://cdn1win.com/img/bonus-500.ff9ad472c-477.png), linear-gradient(103.36deg, rgb(138, 41, 241), rgb(98, 97, 245));">
+<div class="carousel-card-container">
+<div class="carousel-card-container-title">
++1000<br> за друга!
 </div>
 </div>
 <div class="carousel-card-arrow">
@@ -216,10 +230,10 @@ rusadmru7@rubi.fun
 </div>
 
 <div class="carousel-card-link ref-card-link">
-<div class="carousel-card-content" style="background-image: url(https://cdn1win.com/img/bonus-500.ff9ad472c-477.png), linear-gradient(103.36deg, rgb(138, 41, 241), rgb(98, 97, 245));">
+<div class="carousel-card-content" style='background-image: url("https://static-adm.cdn1win.com/universal-offer-files/7c-XjB0UT5z8gfE_KBgmYyKkKXGXj8jbuzf_b30PS3E2a8eVzv924dA1dFsreWCY2jCha-Sj8T6_QR34nLgDeE5Q01-5dDYMwRfY.png"), linear-gradient(103.36deg, rgb(0, 108, 255), rgb(204, 0, 255));'>
 <div class="carousel-card-container">
 <div class="carousel-card-container-title">
-+1000<br> за друга!
+Евротурнир<br> на 25000₽
 </div>
 </div>
 <div class="carousel-card-arrow">
