--- a/index.html
+++ b/index.html
@@ -203,10 +203,10 @@ rusadmru7@rubi.fun
 <div class="carousel-home">
 
 <div class="carousel-card-link">
-<div class="carousel-card-content" style="background-image: url("https://static-adm.cdn1win.com/universal-offer-files/y9EFZ1akMOE6eBe1D2LO670NYOBVr6JvpZQ3d6VqGugog9OGXRVP2Y0gvxAgUXr1iX9XNTm6qJQW2rslQtdCIR6i32Gii_l9GH5t.png"), linear-gradient(103.36deg, rgb(0, 162, 255), rgb(0, 42, 120));">
+<div class="carousel-card-content" style='background-image: url("https://static-adm.cdn1win.com/universal-offer-files/y9EFZ1akMOE6eBe1D2LO670NYOBVr6JvpZQ3d6VqGugog9OGXRVP2Y0gvxAgUXr1iX9XNTm6qJQW2rslQtdCIR6i32Gii_l9GH5t.png"), linear-gradient(103.36deg, rgb(0, 162, 255), rgb(0, 42, 120));'>
 <div class="carousel-card-container">
 <div class="carousel-card-container-title">
-Лицензионный слоты<br>прямо в приложении!
+Лицензионные слоты
 </div>
 </div>
 <div class="carousel-card-arrow">
