--- a/index.html
+++ b/index.html
@@ -203,10 +203,10 @@ rusadmru7@rubi.fun
 <div class="carousel-home">
 
 <div class="carousel-card-link">
-<div class="carousel-card-content" style='background-image: url("https://static-adm.cdn1win.com/universal-offer-files/-iX1ieNU7YNmvi0x-IH_FQQyFOW_P8DH4CwK0INume08ZBpksPNh_0PtE1QrJoZuIVPjS5JDfkRYiCeYIWbK8h6SZM5UCThAc9-9.png"), linear-gradient(103.36deg, rgb(0, 78, 255), rgb(0, 216, 255));'>
+<div class="carousel-card-content" style='background-image: url("https://static-adm.cdn1win.com/universal-offer-files/SZrkMYi4Af2xHH9N4VAhpQqhgLHmn5oKyCtPShrEGPK-zLiMatilqAoNQWbAvFurk-wGstVu9Z22YpKI74rWz3LDNPcamEVq8Ihc.png"), linear-gradient(103.36deg, rgb(31, 0, 220), rgb(215, 35, 236));'>
 <div class="carousel-card-container">
 <div class="carousel-card-container-title">
-Лицензионные слоты
+Лицензионное казино
 </div>
 </div>
 <div class="carousel-card-arrow">
