--- a/index.html
+++ b/index.html
@@ -202,6 +202,20 @@ rusadmru7@rubi.fun
 <div class="carousel-wrapper">
 <div class="carousel-home">
 
+<div class="carousel-card-link tourmant-card-link">
+<div class="carousel-card-content" style='background-image: url("https://static-adm.cdn1win.com/universal-offer-files/7c-XjB0UT5z8gfE_KBgmYyKkKXGXj8jbuzf_b30PS3E2a8eVzv924dA1dFsreWCY2jCha-Sj8T6_QR34nLgDeE5Q01-5dDYMwRfY.png"), linear-gradient(103.36deg, rgb(0, 108, 255), rgb(204, 0, 255));'>
+<div class="carousel-card-container">
+<div class="carousel-card-container-title">
+Евротурнир<br> на 25000₽
+</div>
+</div>
+<div class="carousel-card-arrow">
+<svg viewBox="0 0 16 10" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" class="icon icon-arrow-right-long sm BonusCard_arrowIcon_tQ62j BonusCard_arrowIcon_tQ62j"><path d="M10.917 1.25L14.667 5m0 0l-3.75 3.75M14.667 5H1.333" stroke="#fff" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round"></path></svg>
+</div>
+</div>
+</div>
+
+
 <div class="carousel-card-link">
 <div class="carousel-card-content" style='background-image: url("https://static-adm.cdn1win.com/universal-offer-files/SZrkMYi4Af2xHH9N4VAhpQqhgLHmn5oKyCtPShrEGPK-zLiMatilqAoNQWbAvFurk-wGstVu9Z22YpKI74rWz3LDNPcamEVq8Ihc.png"), linear-gradient(103.36deg, rgb(31, 0, 220), rgb(215, 35, 236));'>
 <div class="carousel-card-container">
@@ -229,18 +243,6 @@ rusadmru7@rubi.fun
 </div>
 </div>
 
-<div class="carousel-card-link ref-card-link">
-<div class="carousel-card-content" style='background-image: url("https://static-adm.cdn1win.com/universal-offer-files/7c-XjB0UT5z8gfE_KBgmYyKkKXGXj8jbuzf_b30PS3E2a8eVzv924dA1dFsreWCY2jCha-Sj8T6_QR34nLgDeE5Q01-5dDYMwRfY.png"), linear-gradient(103.36deg, rgb(0, 108, 255), rgb(204, 0, 255));'>
-<div class="carousel-card-container">
-<div class="carousel-card-container-title">
-Евротурнир<br> на 25000₽
-</div>
-</div>
-<div class="carousel-card-arrow">
-<svg viewBox="0 0 16 10" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" class="icon icon-arrow-right-long sm BonusCard_arrowIcon_tQ62j BonusCard_arrowIcon_tQ62j"><path d="M10.917 1.25L14.667 5m0 0l-3.75 3.75M14.667 5H1.333" stroke="#fff" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round"></path></svg>
-</div>
-</div>
-</div>
 
 <div class="carousel-card-link" style="visibility: hidden; pointer-events: none;width: 7%;">
 <div class="carousel-card-content">
