--- a/index.html
+++ b/index.html
@@ -176,11 +176,16 @@ rusadmru7@rubi.fun
 
 <div class="wallet-separator"></div>
 
+<div class="payment-btn-pb">
+<svg class="payment-btn-svg" xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" width="512" height="512" x="0" y="0" viewBox="0 0 134 134" style="enable-background:new 0 0 512 512" xml:space="preserve" fill-rule="evenodd" class="hovered-paths"><g><path d="M66.667 12.5C36.771 12.5 12.5 36.771 12.5 66.667c0 29.895 24.271 54.166 54.167 54.166 29.895 0 54.166-24.271 54.166-54.166 0-29.896-24.271-54.167-54.166-54.167zm14.94 72.917-4.672 4.672c-1.626 1.626-1.626 4.266 0 5.892s4.267 1.626 5.893 0l11.785-11.785a4.166 4.166 0 0 0 0-5.892L82.828 66.519c-1.626-1.626-4.267-1.626-5.893 0s-1.626 4.266 0 5.892l4.672 4.672h-39.94c-2.3 0-4.167 1.867-4.167 4.167s1.867 4.167 4.167 4.167zm-29.881-37.5 4.672-4.673c1.626-1.626 1.626-4.266 0-5.892s-4.266-1.626-5.892 0L38.72 49.137a4.168 4.168 0 0 0 0 5.893l11.786 11.785c1.626 1.626 4.266 1.626 5.892 0s1.626-4.267 0-5.893l-4.672-4.672h39.941a4.169 4.169 0 0 0 4.166-4.167 4.168 4.168 0 0 0-4.166-4.166z" fill="#ffffff" opacity="1" data-original="#000000" class="hovered-path"></g></svg>
+<span class="payment-btn-name">Перевод средств</span>
+</div>
+
 <div class="payment-btn-pb coming-payment-btn">
 <svg class="payment-btn-svg" xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" width="512" height="512" x="0" y="0" viewBox="0 0 32 32" style="enable-background:new 0 0 512 512" xml:space="preserve" class=""><g><path d="M27.59 13c-.63 0-1.26.26-1.71.71l-6.59 6.59c-.11.11-.19.24-.24.39l-1 3c-.12.36-.03.76.24 1.02.19.19.45.29.71.29.11 0 .21-.02.32-.05l3-1c.15-.05.28-.13.39-.24l6.59-6.58a2.411 2.411 0 0 0-1.7-4.12zM17 2.59V7h4.41z" fill="#ffffff" opacity="1" data-original="#000000"></path><path d="M19 27c-.79 0-1.56-.32-2.12-.88a2.985 2.985 0 0 1-.73-3.07l1-3c.15-.44.4-.85.73-1.17L22 14.76V9h-5c-1.1 0-2-.9-2-2V2H4c-1.1 0-2 .9-2 2v24c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2v-1.84l-2.05.68a3 3 0 0 1-.95.15zm-7-2h-.59l-.71.71a.99.99 0 0 1-.71.29c-.08 0-.15 0-.23-.03a1 1 0 0 1-.72-.66l-.55-1.65c-.48.64-.5 1.3-.5 1.34-.01.54-.46.98-1 .98h-.01c-.55 0-.99-.45-.99-.99 0-.11.03-2.63 2.55-3.89a1.002 1.002 0 0 1 1.4.58l.5 1.49c.16-.11.36-.17.56-.17h1c.55 0 1 .45 1 1s-.45 1-1 1zm1-12c1.1 0 2 .9 2 2v1c0 1.1-.9 2-2 2 0 .55-.45 1-1 1s-1-.45-1-1h-1c-.55 0-1-.45-1-1s.45-1 1-1h3v-1h-2c-1.1 0-2-.9-2-2v-1c0-1.1.9-2 2-2 0-.55.45-1 1-1s1 .45 1 1h1c.55 0 1 .45 1 1s-.45 1-1 1h-3v1z" fill="#ffffff" opacity="1" data-original="#000000"></path></g></svg>
 <span class="payment-btn-name">Займ (Скоро...)</span>
 </div>
-
+	
 </div>
 
 <div class="history-page-block">
