--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&amp;display=swap" rel="stylesheet">
-<title>RUBI Wallet</title>
+<title>RUBI</title>
 <link rel="icon" href="img/IMG_0060.jpeg" >
 <link rel="apple-touch-icon" href="img/IMG_0060.jpeg" >
 <link rel="stylesheet" href="css/app.css">
@@ -40,6 +40,56 @@
 </div>
 
 <div class="body-content">
+
+<div class="deposit-page-block">
+
+<div class="page-name">Пополнение счета</div>
+
+<div class="wallet-separator"></div>
+
+<div class="deposit-system-item">
+<img src='img/sbp.svg' class="deposit-system-icon">
+<div style='margin-left: 10px;'>
+<div class="deposit-system-name">
+СБП
+</div>
+<div class="deposit-system-sub">
+Перевод по номеру телефона 
+</div>
+</div>
+	
+</div>
+
+<style>
+.deposit-system-icon{
+	width: 22px;
+	height: auto;
+	pointer-events: none;
+}
+.deposit-system-item{
+	width:100%;
+	display: flex;
+	align-items: center;
+	border-radius: 12px;
+	background: #15192f;
+	color:#fff;
+	font-size: 13px;
+	height: 40px;
+	padding-left: 15px;
+	margin-bottom: 20px;
+}
+.deposit-system-name{
+	font-size: 15px;
+	font-weight: 700;
+	margin-bottom: 5px;
+}
+.deposit-system-sub{
+	font-size: 12px;
+	opacity: .7;
+}
+</style>
+	
+</div>
 
 <div class="profile-page-block">
 
