--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ rusadmru7@rubi.fun
 
 </div>
 
-<div class="home-page-block active">
+<div class="home-page-block">
 
 <div class="carousel-wrapper">
 <div class="carousel-home">
