--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
 	cursor: pointer;
 	color:#fff;
     border-radius: 10px;
+	--2410b24e: linear-gradient(103.36deg, rgb(138, 41, 241), rgb(98, 97, 245));
+    margin-bottom: 12px;
+    background: var(--2410b24e);
 }
 	
 .deposit-system-icon{
