--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <meta name="msapplication-starturl" content="/index.html">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-<meta name="application-name" content="RUBI Wallet">
-<meta name="apple-mobile-web-app-title" content="RUBI Wallet">
+<meta name="application-name" content="RUBI">
+<meta name="apple-mobile-web-app-title" content="RUBI">
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
