--- a/index.html
+++ b/index.html
@@ -71,11 +71,12 @@
 	display: block;
     width: 100%;
     height: 40px;
+	font-size: 15px;
 	font-weight: 700;
 	cursor: pointer;
 	color:#fff;
     border-radius: 10px;
-	--2410b24e: linear-gradient(103.36deg, rgb(138, 41, 241), rgb(98, 97, 245));
+	--2410b24e: linear-gradient(267.95deg, #00a3ff 0%, #0047ff 100%);
     margin-bottom: 12px;
     background: var(--2410b24e);
 }
