--- a/index.html
+++ b/index.html
@@ -65,62 +65,7 @@
 
 <button class="deposit-system-btn">Пополнить</button>
 	
-<style>
 
-.deposit-system-btn{
-	display: block;
-    width: 100%;
-    height: 40px;
-	font-size: 13px;
-	font-weight: 700;
-	cursor: pointer;
-	color:#fff;
-    border-radius: 10px;
-	--2410b24e: linear-gradient(267.95deg, #00a3ff 0%, #0047ff 100%);
-    margin-bottom: 12px;
-    background: var(--2410b24e);
-}
-	
-.deposit-system-icon{
-	width: 17.5px;
-	height: auto;
-	pointer-events: none;
-}
-.deposit-system-input{
-	width:100%;
-	display: flex;
-	align-items: center;
-	border-radius: 12px;
-	background: #15192f;
-	color:#fff;
-	font-size: 13px;
-	height: 50px;
-	padding-left: 15px;
-	margin-bottom: 20px;
-}
-	
-.deposit-system-item{
-	width:100%;
-	display: flex;
-	align-items: center;
-	border-radius: 12px;
-	background: #15192f;
-	color:#fff;
-	font-size: 13px;
-	height: 50px;
-	padding-left: 15px;
-	margin-bottom: 20px;
-}
-.deposit-system-name{
-	font-size: 15px;
-	font-weight: 700;
-}
-.deposit-system-sub{
-	font-size: 12px;
-	opacity: .7;
-}
-</style>
-	
 </div>
 
 <div class="profile-page-block">
@@ -245,7 +190,7 @@ rusadmru7@rubi.fun
 
 <div class="wallet-separator"></div>
 
-<div class="payment-btn-pb">
+<div class="payment-btn-pb deposit-payment-btn-pb">
 <!--- <span class="payment-btn-img"></span> -->
 <svg class="payment-btn-svg" xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" width="512" height="512" x="0" y="0" viewBox="0 0 24 24" style="enable-background:new 0 0 512 512" xml:space="preserve" class=""><g><path fill-rule="evenodd" d="M18 3H6C3.8 3 2 4.8 2 7c0 1.7 1 3.1 2.5 3.7V7c0-.4.2-.8.4-1.1s.7-.4 1.1-.4h12c.4 0 .8.2 1.1.4s.4.7.4 1.1v3.7C21 10.1 22 8.7 22 7c0-2.2-1.8-4-4-4zm0 16V7H6v12c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2zm-6.8-6.6-.7.7c-.3.3-.8.3-1.1 0s-.3-.8 0-1.1l1.3-1.3c.7-.7 1.8-.7 2.5 0l1.3 1.3c.3.3.3.8 0 1.1s-.8.3-1.1 0l-.7-.7v4.2c0 .4-.3.8-.8.8s-.8-.3-.8-.8v-4.2z" clip-rule="evenodd" fill="#ffffff" opacity="1" data-original="#000000" class=""></path></g></svg>
 <span class="payment-btn-name">Пополнение счета</span>
@@ -284,7 +229,7 @@ rusadmru7@rubi.fun
 
 </div>
 
-<div class="home-page-block">
+<div class="home-page-block active">
 
 <div class="carousel-wrapper">
 <div class="carousel-home">
