--- a/index.html
+++ b/index.html
@@ -63,6 +63,27 @@
 
 <input class="deposit-system-input" type="number" min="100" max="5000" value="1000" placeholder="1000">
 
+<div class="payment-system-limit">
+<div class="payment-system-limit-name">Лимит одного пополнения</div>
+<div class="payment-system-limit-amount">от 100 ₽ до 5000 ₽</div>
+</div>
+
+<style>
+.payment-system-limit{
+	display:flex;
+	margin-bottom: 20px;
+}
+.payment-system-limit-name{
+	font-size: 13px;
+	color:#fff;
+}
+.payment-system-limit-amount{
+	font-size: 13px;
+	color:#fff;
+	margin-left: auto;
+}
+</style>
+	
 <button class="deposit-system-btn">Пополнить</button>
 	
 
