--- a/index.html
+++ b/index.html
@@ -71,14 +71,16 @@
 <style>
 .payment-system-limit{
 	display:flex;
+	opacity:.7;
+	pointer-events: none;
 	margin-bottom: 20px;
 }
 .payment-system-limit-name{
-	font-size: 13px;
+	font-size: 12px;
 	color:#fff;
 }
 .payment-system-limit-amount{
-	font-size: 13px;
+	font-size: 12px;
 	color:#fff;
 	margin-left: auto;
 }
