--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ rusadmru7@rubi.fun
 </div>
 
 <div class="payment-btn-pb">
-<svg class="payment-btn-svg" xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" width="512" height="512" x="0" y="0" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512" xml:space="preserve" class="hovered-paths"><g><lineargradient id="a" x1="115.792" x2="396.208" y1="13.153" y2="498.848" gradientUnits="userSpaceOnUse">…</lineargradient><path fill="url(#a)" d="M362.237 0h-54.11v22.546a4.2 4.2 0 0 1-4.2 4.2H202.506a4.2 4.2 0 0 1-4.2-4.2V0h-48.543c-20.9 0-37.9 15.14-37.9 33.748v444.5c0 18.609 17 33.748 37.9 33.748h212.474c20.9 0 37.9-15.139 37.9-33.748v-444.5C400.134 15.14 383.133 0 362.237 0zm-53.406 475.361H202.272a4.2 4.2 0 1 1 0-8.394h106.559a4.2 4.2 0 0 1 0 8.394zm-9.1-457.012H206.7V0h93.031z" opacity="1" data-original="url(#a)" class="hovered-path"></g></svg>
+<svg class="payment-btn-svg" xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" width="512" height="512" x="0" y="0" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512" xml:space="preserve" class="hovered-paths"><g><path fill="#fff" d="M362.237 0h-54.11v22.546a4.2 4.2 0 0 1-4.2 4.2H202.506a4.2 4.2 0 0 1-4.2-4.2V0h-48.543c-20.9 0-37.9 15.14-37.9 33.748v444.5c0 18.609 17 33.748 37.9 33.748h212.474c20.9 0 37.9-15.139 37.9-33.748v-444.5C400.134 15.14 383.133 0 362.237 0zm-53.406 475.361H202.272a4.2 4.2 0 1 1 0-8.394h106.559a4.2 4.2 0 0 1 0 8.394zm-9.1-457.012H206.7V0h93.031z" opacity="1" data-original="url(#a)" class="hovered-path"></g></svg>
 <span class="payment-btn-name">Мобильная связь</span>
 </div>
 
