--- a/index.html
+++ b/index.html
@@ -33,13 +33,56 @@
 
 <div class="header-items">
 
-
-
+<svg style ="width:30px; height: 30px;" xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" width="512" height="512" x="0" y="0" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512" xml:space="preserve">
+<rect width="512" height="512" fill="#ffffff" shape="square">
+<g transform="matrix(0.7,0,0,0.7,76.81499905586244,76.80000000000001)">
+<lineargradient id="a" x1="4.1" x2="508" y1="256" y2="256" gradientUnits="userSpaceOnUse">
+<stop stop-opacity="1" stop-color="#2823f9" offset="0">
+<stop stop-opacity="1" stop-color="#4e88ff" offset="1">
+</lineargradient>
+<path fill="url(#a)" fill-rule="evenodd" d="M27.4 209.4h292.3c1.2 0 19.7-.7 19.7-22.4 0-22.4-18.8-25.1-18.8-25.1H4.1v-139h300.4c111.8 0 166.8 63.4 166.8 155.1 0 111.2-128.2 124.6-128.2 124.6l40.3 51.1H508v135.4H344.8l-147-148.8h-14.3v148.8h-156z" clip-rule="evenodd" opacity="1" data-original="url(#a)">
+</g>
+</svg>
+	
 </div>
 
 </div>
 
 <div class="body-content">
+
+<div class="withdraw-page-block">
+
+<div class="page-name">Вывод средств</div>
+
+<div class="wallet-separator"></div>
+
+<div class="deposit-system-item">
+	
+<img src='img/visa.png' class="deposit-system-icon">
+<div style='margin-left: 10px;'>
+<div class="deposit-system-name">
+Карта
+</div>
+<div class="deposit-system-sub">
+Вывод по номеру карты
+</div>
+</div>
+	
+</div>
+
+<input class="withdraw-system-input withdraw-number" placeholder="Номер счета">
+	
+<input class="withdraw-system-input withdraw-amount" type="number" min="1000" max="5000" value="1000" placeholder="Сумма вывода">
+
+<div class="payment-system-limit">
+<div class="payment-system-limit-name">Лимит одного вывода</div>
+<div class="payment-system-limit-amount">от 1000 ₽ до 5000 ₽</div>
+</div
+	
+<button class="deposit-system-btn">Пополнить</button>
+	
+
+</div>
 
 <div class="deposit-page-block">
 
@@ -66,25 +109,7 @@
 <div class="payment-system-limit">
 <div class="payment-system-limit-name">Лимит одного пополнения</div>
 <div class="payment-system-limit-amount">от 100 ₽ до 5000 ₽</div>
-</div>
-
-<style>
-.payment-system-limit{
-	display:flex;
-	opacity:.7;
-	pointer-events: none;
-	margin-bottom: 20px;
-}
-.payment-system-limit-name{
-	font-size: 12px;
-	color:#fff;
-}
-.payment-system-limit-amount{
-	font-size: 12px;
-	color:#fff;
-	margin-left: auto;
-}
-</style>
+</div
 	
 <button class="deposit-system-btn">Пополнить</button>
 	
@@ -257,7 +282,7 @@ rusadmru7@rubi.fun
 
 </div>
 
-<div class="home-page-block active">
+<div class="home-page-block ">
 
 <div class="carousel-wrapper">
 <div class="carousel-home">
