--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <svg style ="width:30px; height: 30px;border-radius: 50%;" xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" width="512" height="512" x="0" y="0" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512" xml:space="preserve">
 <rect width="512" height="512" fill="#ffffff" shape="square">
 
-<path fill="#000" fill-rule="evenodd" d="M27.4 209.4h292.3c1.2 0 19.7-.7 19.7-22.4 0-22.4-18.8-25.1-18.8-25.1H4.1v-139h300.4c111.8 0 166.8 63.4 166.8 155.1 0 111.2-128.2 124.6-128.2 124.6l40.3 51.1H508v135.4H344.8l-147-148.8h-14.3v148.8h-156z" clip-rule="evenodd" opacity="1" data-original="url(#a)">
+<path fill="#000" d="M27.4 209.4h292.3c1.2 0 19.7-.7 19.7-22.4 0-22.4-18.8-25.1-18.8-25.1H4.1v-139h300.4c111.8 0 166.8 63.4 166.8 155.1 0 111.2-128.2 124.6-128.2 124.6l40.3 51.1H508v135.4H344.8l-147-148.8h-14.3v148.8h-156z" clip-rule="evenodd" opacity="1" >
 </g>
 </svg>
 	
@@ -73,7 +73,7 @@
 <div class="payment-system-limit">
 <div class="payment-system-limit-name">Лимит одного вывода</div>
 <div class="payment-system-limit-amount">от 1000 ₽ до 5000 ₽</div>
-</div
+</div>
 	
 <button class="withdraw-system-btn">Вывести</button>
 	
@@ -105,7 +105,7 @@
 <div class="payment-system-limit">
 <div class="payment-system-limit-name">Лимит одного пополнения</div>
 <div class="payment-system-limit-amount">от 100 ₽ до 5000 ₽</div>
-</div
+</div>
 	
 <button class="deposit-system-btn">Пополнить</button>
 	
