--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ rusadmru7@rubi.fun
 
 </div>
 
-<div class="home-page-block ">
+<div class="home-page-block active">
 
 <div class="carousel-wrapper">
 <div class="carousel-home">
