--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <div class="deposit-system-item">
 	
-<img src='img/visa.png' class="deposit-system-icon">
+<img src='img/credit-cards-payment.png' class="deposit-system-icon">
 <div style='margin-left: 10px;'>
 <div class="deposit-system-name">
 Карта
