--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <meta name="author" content="RUBI">
 <meta name="msapplication-starturl" content="/index.html">
 <meta name="apple-mobile-web-app-capable" content="yes">
+<link rel="apple-touch-startup-image" href="img/IMG_0060.jpeg">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <meta name="application-name" content="RUBI">
 <meta name="apple-mobile-web-app-title" content="RUBI">
